# mod-optimal-bot-raid

./: CMakeLists.txt  LICENSE  README.md  include.sh
_submissions/module/: mod-optimal-bot-raid.md
conf/: mod_optimal_bot_raid.conf.dist
src/: cs_optimal_bot_raid.cpp  mod_optimal_bot_raid_loader.cpp
